<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yahs.king.gaodemaps.ui.activity.HelpMeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/helpToolbar"
        >
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/toolbar_updateInfo"
        android:textColor="@android:color/white"
        />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_helpMe"
        android:hint="@string/help_me_info"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:background="@drawable/et_input"
        android:layout_height="170dp" />
    <View
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <EditText
        android:id="@+id/et_helpMeLocation"
        android:hint="@string/help_me_location"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="none"
        android:editable="false"
        android:layout_width="match_parent"
        android:background="@drawable/et_input"
        android:layout_height="60dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/bt_share"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/button_share"
        android:onClick="share"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:background="@drawable/bt_background_corners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</layout>
