<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fitsSystemWindows="true"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@drawable/toolbar_background_gradient"
            >
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/title_register"
                android:textColor="@android:color/white"
                />

        </android.support.v7.widget.Toolbar>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/register_setting_photo"
            android:src="@drawable/default_photo"
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:onClick="takePhoto"
            android:layout_height="100dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"/>

        <EditText
            android:id="@+id/et_username"
            android:hint="@string/username"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:textCursorDrawable="@android:color/darker_gray"
            android:layout_marginRight="30dp"
            android:drawablePadding="7dp"
            android:paddingLeft="12dp"
            android:drawableLeft="@drawable/user2"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:background="@drawable/et_background_corners"
            android:layout_height="50dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/transparent"/>
        <EditText
            android:inputType="numberPassword"
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="7dp"
            android:textCursorDrawable="@android:color/darker_gray"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="18sp"
            android:paddingLeft="12dp"
            android:background="@drawable/et_background_corners"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"/>
        <Button
            android:text="@string/register"
            android:textSize="17sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@android:color/white"
            android:id="@+id/bt_register"
            android:onClick="onClick"
            android:background="@drawable/bt_background_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>