<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<data>
        <variable
            name="presenter"
            type="com.yahs.king.gaodemaps.ui.activity.LoginActivity.Presenter"/>
    </data>-->
    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/toolbar_background_gradient"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_login"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/transparent" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:orientation="vertical">
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:background="@android:color/white"/>

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/et_background_corners"
                    android:drawableLeft="@drawable/user2"
                    android:drawablePadding="7dp"
                    android:hint="@string/username"
                    android:paddingLeft="10dp"
                    android:textCursorDrawable="@android:color/darker_gray"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/transparent" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/et_background_corners"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="7dp"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textCursorDrawable="@android:color/darker_gray"
                    android:textSize="18sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/transparent" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="onClick"
            android:text="@string/tv_register"
            android:textColor="@color/avoscloud_blue"
            android:layout_marginRight="30dp"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/transparent" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bt_background_corners"
            android:onClick="onClick"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>
</layout>